--- a/index.html
+++ b/index.html
@@ -1,15 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Cooking with Engineers</title>
 </head>
 <body>
-    <button id = "fetch">Fetch</button>
-    <script src = "array.js"></script>
-    <script src = "app.js"></script>
+    <div class="container p-4 my-5 bg-primary text-white" id="title">
+        <h2 class="text-center">Welcome to cooking with Engineers!</h2>
+        <p class="text-center">A 448 Project by <abbr title="Elen Bhattarai, Javante Ewing, Alex Manley, Joaquin Vargas, and Max Dick">Group 7</abbr>.</p>
+    </div>
+    
+    <div class="float-container">   
+        <div class="float-child" id="section1">
+            <h2>Add your Ingredients</h2>
+            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#meats">Meats </button>
+                <div id="meats" class="collapse">
+                    <button type="button" class="btn btn-outline-success">Chicken</button>
+                    <button type="button" class="btn btn-outline-success">Beef</button>
+                    <button type="button" class="btn btn-outline-success">Pork</button>
+                    <button type="button" class="btn btn-outline-success">Fish</button>
+                </div>
+            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#veg">Vegetables </button>
+                <div id="veg" class="collapse">
+                    <button type="button" class="btn btn-outline-success">Lettuce</button>
+                    <button type="button" class="btn btn-outline-success">Carrots</button>
+                    <button type="button" class="btn btn-outline-success">Brocolli</button>
+                    <button type="button" class="btn btn-outline-success">Peas</button>
+                    <button type="button" class="btn btn-outline-success">Corn</button>
+                </div>
+            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#spice">Spices </button>
+                <div id="spice" class="collapse">
+                    <button type="button" class="btn btn-outline-success">Salt</button>
+                    <button type="button" class="btn btn-outline-success">Pepper</button>
+                    <button type="button" class="btn btn-outline-success">Garlic Powder</button>
+                    <button type="button" class="btn btn-outline-success">Onion Powder</button>
+                    <button type="button" class="btn btn-outline-success">Lemon-Pepper</button>
+                </div>
+        </div>
+        <div class="float-child" id="section1">
+            <h2>Filters</h2>
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#allergies">Allergies </button>
+                    <div id="allergies" class="collapse">
+                        <button type="button" class="btn btn-outline-success">Peanut</button>
+                        <button type="button" class="btn btn-outline-success">Milk</button>
+                        <button type="button" class="btn btn-outline-success">Eggs</button>
+                    </div>
+        </div>
+    </div>
+
+    <div class="container" id="searchbutton"></div>
+        <button type="button" class="btn btn-danger btn-block" id="fetch"> -------- Search --------</button>
+        <script src = "array.js"></script>
+        <script src = "app.js"></script>
+    </div>
+
 </body>
 </html>
