Worked designs, made the search work

--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
             <h2>Add your Ingredients</h2>
             <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#meats">Meats </button>
                 <div id="meats" class="collapse">
-                    <button type="button" class="btn btn-outline-success">Chicken</button>
-                    <button type="button" class="btn btn-outline-success">Beef</button>
-                    <button type="button" class="btn btn-outline-success">Pork</button>
-                    <button type="button" class="btn btn-outline-success">Fish</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Chicken</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Beef</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Pork</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Fish</button>
                 </div>
             <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#veg">Vegetables </button>
                 <div id="veg" class="collapse">
-                    <button type="button" class="btn btn-outline-success">Lettuce</button>
-                    <button type="button" class="btn btn-outline-success">Carrots</button>
-                    <button type="button" class="btn btn-outline-success">Brocolli</button>
-                    <button type="button" class="btn btn-outline-success">Peas</button>
-                    <button type="button" class="btn btn-outline-success">Corn</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Lettuce</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Carrots</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Brocolli</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Peas</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Corn</button>
                 </div>
             <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#spice">Spices </button>
                 <div id="spice" class="collapse">
-                    <button type="button" class="btn btn-outline-success">Salt</button>
-                    <button type="button" class="btn btn-outline-success">Pepper</button>
-                    <button type="button" class="btn btn-outline-success">Garlic Powder</button>
-                    <button type="button" class="btn btn-outline-success">Onion Powder</button>
-                    <button type="button" class="btn btn-outline-success">Lemon-Pepper</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Salt</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Pepper</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Garlic Powder</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Onion Powder</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Lemon-Pepper</button>
                 </div>
         </div>
         <div class="float-child" id="section1">
@@ -52,13 +52,13 @@
                         <button type="button" class="btn btn-outline-success">Eggs</button>
                     </div>
         </div>
+        <button type="button" class="btn btn-danger btn-block" id="fetch">Search </button>
     </div>
 
-    <div class="container" id="searchbutton"></div>
-        <button type="button" class="btn btn-danger btn-block" id="fetch"> -------- Search --------</button>
-        <script src = "array.js"></script>
-        <script src = "app.js"></script>
-    </div>
+    
+    
+    <script src = "array.js"></script>
+    <script src = "app.js"></script>
 
 </body>
 </html>
