fixed Broccoli spelling XD

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div id="veg" class="collapse">
                     <button type="button" id = "clicked" class="btn btn-outline-success">Lettuce</button>
                     <button type="button" id = "clicked" class="btn btn-outline-success">Carrots</button>
-                    <button type="button" id = "clicked" class="btn btn-outline-success">Brocolli</button>
+                    <button type="button" id = "clicked" class="btn btn-outline-success">Broccoli</button>
                     <button type="button" id = "clicked" class="btn btn-outline-success">Peas</button>
                     <button type="button" id = "clicked" class="btn btn-outline-success">Corn</button>
                 </div>
